<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.supero.desafiosupero.ContactsActivity" >
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/tvNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inNome" />
        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inEmail" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
        <TextView
            android:id="@+id/tvCep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inCep" />
        <EditText
            android:id="@+id/etCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
        <TextView
            android:id="@+id/tvLogradouro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inLogradouro" />
        <EditText
            android:id="@+id/etLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
        <TextView
            android:id="@+id/tvNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inNumero" />
        <EditText
            android:id="@+id/etNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
        <TextView
            android:id="@+id/tvBairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inBairro" />
        <EditText
            android:id="@+id/etBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
        <TextView
            android:id="@+id/tvComplemento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inComplemento" />
        <EditText
            android:id="@+id/etComplemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
        <TextView
            android:id="@+id/tvCidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inCidade" />
        <EditText
            android:id="@+id/etCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
        <TextView
            android:id="@+id/tvUf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inUf" />
        <EditText
            android:id="@+id/etUf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />
    </LinearLayout>
</RelativeLayout>